--- a/src/index.css
+++ b/src/index.css
@@ -9,18 +9,30 @@ svg:hover #g3287 > *:not(:nth-child(36)):not(:nth-child(37)) {
     animation-iteration-count: infinite;
 }*/
 
-.shake-animation {
+.tree-shake-anim {
     animation: shaker 1.8s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
 }
 
-.shake-animation ~ #svg5 {
+.apple-shake-anim {
+    animation: shaker 1.8s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.05s;
+}
+
+.apple-start-anim {
+    animation: scaleUp 0.8s forwards;
+    backface-visibility: hidden;
+}
+
+/*.shake-animation ~ #svg5 {
     animation: shaker 1.8s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-delay: 0.1s;
-}
+}*/
 
 @keyframes shaker {
     0% {
@@ -78,11 +90,6 @@ svg:hover #g3287 > *:not(:nth-child(36)):not(:nth-child(37)) {
     100% {
         transform: translate(1px, -2px) rotate(-1deg);
     }
-}
-
-.apple-anim {
-    animation: scaleUp 0.8s forwards;
-    backface-visibility: hidden;
 }
 
 @keyframes scaleUp {
