--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,19 @@ svg:hover #g3287 > *:not(:nth-child(36)):not(:nth-child(37)) {
     backface-visibility: hidden;
 }
 
+.apple-fall-anim {
+    animation: apple-fall 1s forwards;
+}
+
+@keyframes apple-fall {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(500px);
+    }
+}
+
 /*.shake-animation ~ #svg5 {
     animation: shaker 1.8s;
     animation-timing-function: ease-in-out;
