feat: apples detect collision each frame. apples disappear upon colliding with baket

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@
     backface-visibility: hidden;
 }
 
+.collided {
+    display: none;
+}
+
 @keyframes thugShaker {
     0% {
         transform: translateX(0);
