--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 .tree-shake-anim {
-    animation: thugShaker 1.8s;
+    animation: treeShaker 1.8s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
 }
 
 .apple-shake-anim {
-    animation: thugShaker 1.8s;
+    animation: treeShaker 1.8s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     animation-delay: 0.05s;
@@ -24,7 +24,7 @@
     display: none;
 }
 
-@keyframes thugShaker {
+@keyframes treeShaker {
     0% {
         transform: translateX(0);
     }
@@ -48,37 +48,37 @@
 
 @keyframes shake {
     0% {
-        transform: translate(1px, 1px) rotate(0deg);
+        transform: translate(4px, 1px) rotate(0deg);
     }
     10% {
-        transform: translate(-1px, -2px) rotate(-1deg);
+        transform: translate(-4px, -1px) rotate(-1deg);
     }
     20% {
-        transform: translate(-3px, 0px) rotate(1deg);
+        transform: translate(-5px, 0px) rotate(1deg);
     }
     30% {
-        transform: translate(3px, 2px) rotate(0deg);
+        transform: translate(5px, 1px) rotate(0deg);
     }
     40% {
-        transform: translate(1px, -1px) rotate(1deg);
+        transform: translate(5px, -1px) rotate(1deg);
     }
     50% {
-        transform: translate(-1px, 2px) rotate(-1deg);
+        transform: translate(-5px, 2px) rotate(-1deg);
     }
     60% {
-        transform: translate(-3px, 1px) rotate(0deg);
+        transform: translate(-5px, 1px) rotate(0deg);
     }
     70% {
-        transform: translate(3px, 1px) rotate(-1deg);
+        transform: translate(5px, 1px) rotate(-1deg);
     }
     80% {
-        transform: translate(-1px, -1px) rotate(1deg);
+        transform: translate(-5px, -1px) rotate(1deg);
     }
     90% {
-        transform: translate(1px, 2px) rotate(0deg);
+        transform: translate(5px, 2px) rotate(0deg);
     }
     100% {
-        transform: translate(1px, -2px) rotate(-1deg);
+        transform: translate(5px, -2px) rotate(-1deg);
     }
 }
 
