--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,13 @@
 .apple-shake-anim {
     animation: treeShaker 1.8s;
     animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
+    animation-timing-function: steps(6, end);
     animation-delay: 0.05s;
 }
 
 .apple-start-anim {
     animation: scaleUp 0.8s forwards;
+    animation-timing-function: steps(40, end);
     backface-visibility: hidden;
 }
 
