--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@
     height: 100vh;
 }
 
+#tree {
+    will-change: transform;
+}
+
+.apple {
+    will-change: transform, scale;
+    flex-basis: 33%;
+}
+
 .tree-shake-anim {
     animation: treeShaker 1.8s;
     animation-iteration-count: infinite;
@@ -20,18 +29,9 @@
     animation-delay: 0.05s;
 }
 
-.apple {
-    will-change: transform, scale;
-    flex-basis: 33%;
-}
-
 .apple-start-anim {
     animation: scaleUp 0.8s steps(21, end);
     backface-visibility: hidden;
-}
-
-.collided {
-    display: none;
 }
 
 @keyframes treeShaker {
